update follow api and add get all users api
